remove linebreaks in links to avoid destroying the design

--- a/assets/site.css
+++ b/assets/site.css
@@ -167,6 +167,7 @@ a {
   position: relative;
   text-decoration: none;
   color: var(--color-primary);
+  white-space: nowrap;
 }
 
 a:not(.cta-button--contact):before {
